# codex-youtube-pipeline

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  catalog-alembic.ini  compose.home.build.yaml  compose.home.yaml  compose.local-infra.yaml  compose.yaml  evaluation-alembic.ini  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 20260615_0001_create_youtube_transcripts.py  20260615_0002_create_streamers_channels.py  20260615_0003_add_youtube_transcript_notes.py  20260616_0004_create_external_api_calls.py  20260616_0005_create_pipeline_jobs.py  20260616_0006_make_youtube_channel_id_unique.py  20260616_0007_create_videos.py  20260616_0008_create_video_tasks.py  20260618_0009_use_uploads_playlist_for_videos.py  20260619_0010_create_operation_events.py  20260619_0011_add_transcript_batch_lock_index.py  20260622_0012_add_no_transcript_video_task_status.py  20260622_0013_create_transcript_cues.py  20260623_0014_create_micro_event_extractions.py  20260623_0015_create_codex_run_usages.py  20260623_0016_micro_event_v3_schema.py  20260623_0017_add_codex_usage_reasoning_effort.py  20260623_0018_create_domain_knowledge.py  20260624_0019_add_video_task_input_json.py  20260624_0020_create_timeline_compositions.py  20260627_0021_create_prompt_versions.py  20260627_0022_create_archive_publications.py  20260702_0023_add_archive_public_catalog_sync.py  20260704_0024_add_video_embed_status.py  20260711_0025_expand_work_execution.py  20260711_0026_expand_work_provenance.py  20260711_0027_normalize_work_input_json.py  20260711_0028_contract_legacy_work_tables.py  20260713_0029_add_pipeline_automation.py  20260714_0030_add_pipeline_runtime_state.py  20260718_0031_add_publication_configuration.py  20260718_0032_add_publication_checkpoints.py  20260718_0033_add_publication_cutovers.py  20260718_0034_enforce_publication_routing_integrity.py
catalog_alembic/: README  env.py  script.py.mako
catalog_alembic/versions/: 20260718_catalog_0001_create_public_catalog.py
deploy/nginx/: home.conf
docs/: AGENT_API_OPERATIONS.md  AGENT_WORK_RUNBOOKS.md  ARCHITECTURE_LINTING.md  ARCHIVE_PUBLISH.md  AWS_DEPLOYMENT.md  CICD.md  CLEAN_ARCHITECTURE.md  CODEX_RUNTIME_COMPATIBILITY.md  HOME_DEPLOYMENT_FLOW.md  HOME_PC_DEPLOYMENT.md  INDEX.md  LOCAL_NATIVE_DEPLOYMENT.md  MODEL_EVALUATION.md  POSTGRESQL_LOCAL_DATABASE.md  PROJECT_OVERVIEW.md  PUBLICATION_MIGRATION.md  WORK_MODEL_CUTOVER.md  YOUTUBE_DATA_PIPELINE.md  YOUTUBE_DATA_PIPELINE_TODO.md  erd.schema.sha256
docs/learnings/: INDEX.md  README.md
evaluation_alembic/: env.py
evaluation_alembic/versions/: 20260718_0001_create_evaluation_schema.py  (+1 more)
ops-ui/: AGENTS.md  Dockerfile  eslint.config.mjs  next-env.d.ts  next.config.ts  package.json  tsconfig.json  vitest.config.ts
scripts/: check_architecture.py  deploy_aws.ps1  export_openapi.py  generate_erd.py  migrate_sqlite_to_postgres.py  prepare_public_catalog.py  probe_codex_models.py  sqlite_checkpoint.py  validate_work_cutover.py  verify_codex_output_schema.py
tests/: __init__.py  conftest.py  test_api.py  test_architecture_budget.py  test_architecture_foundations.py  test_archive_publish.py  test_asr_cli.py  test_cli.py  test_codex_model_choices.py  test_codex_usage_recording.py  test_codex_usage_repository.py  test_database.py  test_database_recovery.py  test_database_session.py  test_domain_knowledge_api.py  test_domain_knowledge_repository.py  test_evaluation.py  test_external_api_calls_repository.py  test_external_api_calls_storage.py  test_generate_erd.py  test_latest_video_priority.py  test_llm_traces.py  test_local_home_runtime.ps1  test_micro_events_api.py  test_micro_events_extractor.py  test_micro_events_repository.py  test_operation_events_api.py  test_operation_events_repository.py  test_ops_api.py  test_ops_embed_refresh.py  test_ops_repository.py  test_ops_ui_v2_backend.py  test_pipeline_automation.py  test_pipeline_jobs_repository.py  test_pipeline_scheduler.py  test_postgres_support.py  test_processing_work.py  test_prompt_resources_encoding.py  test_prompts_api.py  test_prompts_repository.py  (+44 more)
vaults/: INDEX.md
(+635 files in other folders)
