[project]
name = "codex-sdk-cli-demo"
version = "0.1.0"
description = "Small Python CLI demo for the OpenAI Codex SDK."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21,<1",
    "alembic>=1.16,<2",
    "click>=8.1",
    "fastapi[standard]>=0.115",
    "httpx>=0.27,<1",
    "minio>=7.2,<8",
    "openai-codex>=0.1.0b3,<0.2",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0,<3",
    "typing-extensions>=4.12",
    "uvicorn[standard]>=0.30",
    "youtube-transcript-api>=1.2.4,<2",
]

[project.scripts]
codex-api = "codex_sdk_cli.api.main:run"
codex-demo = "codex_sdk_cli.cli:main"
codex-micro-event-worker = "codex_sdk_cli.workers.micro_events:run"

[dependency-groups]
dev = [
    "pyrefly",
    "pytest>=8.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_sdk_cli"]

[tool.uv]
prerelease = "allow"

[tool.fastapi]
entrypoint = "codex_sdk_cli.api.main:app"

[tool.alembic]
script_location = "%(here)s/alembic"
prepend_sys_path = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not performance'"
markers = [
    "performance: opt-in microbenchmarks excluded from the default test run",
]

[tool.pyrefly]
project-includes = ["src", "tests", "scripts"]
