[project]
name = "codex-sdk-cli-demo"
version = "0.1.0"
description = "Small Python CLI demo for the OpenAI Codex SDK."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21,<1",
    "alembic>=1.16,<2",
    "click>=8.1",
    "fastapi[standard]>=0.115",
    "httpx>=0.27,<1",
    "minio>=7.2,<8",
    "openai-codex>=0.1.0b3,<0.2",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0,<3",
    "typing-extensions>=4.12",
    "uvicorn[standard]>=0.30",
    "youtube-transcript-api>=1.2.4,<2",
]

[project.scripts]
codex-api = "codex_sdk_cli.api.main:run"
codex-demo = "codex_sdk_cli.cli:main"
codex-micro-event-worker = "codex_sdk_cli.workers.micro_events:run"
codex-timeline-compose-worker = "codex_sdk_cli.workers.timelines:run"

[dependency-groups]
dev = [
    "import-linter>=2.12",
    "pyrefly",
    "pytest>=8.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_sdk_cli"]

[tool.uv]
prerelease = "allow"

[tool.fastapi]
entrypoint = "codex_sdk_cli.api.main:app"

[tool.alembic]
script_location = "%(here)s/alembic"
prepend_sys_path = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not performance'"
markers = [
    "performance: opt-in microbenchmarks excluded from the default test run",
]

[tool.pyrefly]
project-includes = ["src", "tests", "scripts"]

[tool.importlinter]
root_package = "codex_sdk_cli"
include_external_packages = true
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "Clean architecture layers"
type = "layers"
layers = [
    "api | workers",
    "infra",
    "domains",
]
containers = ["codex_sdk_cli"]

[[tool.importlinter.contracts]]
name = "Domains do not import outer app layers"
type = "forbidden"
source_modules = ["codex_sdk_cli.domains"]
forbidden_modules = [
    "codex_sdk_cli.api",
    "codex_sdk_cli.infra",
    "codex_sdk_cli.workers",
    "codex_sdk_cli.settings",
]

[[tool.importlinter.contracts]]
name = "Domains do not import external adapters"
type = "forbidden"
source_modules = ["codex_sdk_cli.domains"]
forbidden_modules = [
    "fastapi",
    "httpx",
    "minio",
    "openai_codex",
    "sqlalchemy",
    "uvicorn",
    "youtube_transcript_api",
]

[[tool.importlinter.contracts]]
name = "Infrastructure does not import app entrypoints"
type = "forbidden"
source_modules = ["codex_sdk_cli.infra"]
forbidden_modules = [
    "codex_sdk_cli.api",
    "codex_sdk_cli.workers",
]
